Correction scrollbare horizontale

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 body {
   box-sizing: border-box;
   margin: auto;
+  overflow-x: hidden;
 }
 
 main {
@@ -295,7 +296,6 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
