--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -11,6 +11,7 @@
 body{
     box-sizing: border-box;
     margin: auto;
+    overflow-x: hidden;
 }
 
 main{
@@ -20,6 +21,7 @@ main{
     max-width: 1200px;
     padding-top: 60px;
 
+    
     @media (max-width: $bp-m) {
         padding-top:95px;
     }
