--- a/src/style/components/_modal.scss
+++ b/src/style/components/_modal.scss
@@ -4,7 +4,6 @@
     left: 0; 
     width: 100%; 
     height: 100%; 
-    z-index: 1000;
     background-color: rgba(0, 0, 0, 0.7); 
     display: flex; 
     justify-content: center; 
